--- a/package.json
+++ b/package.json
@@ -1,21 +1,27 @@
 {
-	"name": "template-backend-ts-express-mongoose",
+	"name": "backend-pluviometria",
 	"version": "1.0.0",
 	"description": "",
 	"main": "app.ts",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"dev": "nodemon app.ts"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
 		"cors": "^2.8.5",
-		"dotenv": "^16.0.3",
+		"dotenv": "^16.4.5",
 		"express": "^4.18.2",
-		"mongoose": "^7.0.2"
+		"mongoose": "^7.0.2",
+		"nodemon": "^3.1.0",
+		"puppeteer": "^22.6.1"
 	},
 	"devDependencies": {
+		"@types/cors": "^2.8.17",
+		"@types/express": "^4.17.21",
+		"@types/node": "^20.12.2",
 		"@typescript-eslint/eslint-plugin": "^5.55.0",
 		"@typescript-eslint/parser": "^5.55.0",
 		"eslint": "^8.36.0",
@@ -23,6 +29,7 @@
 		"eslint-plugin-import": "^2.27.5",
 		"eslint-plugin-n": "^15.6.1",
 		"eslint-plugin-promise": "^6.1.1",
-		"typescript": "^5.0.2"
+		"ts-node": "^10.9.2",
+		"typescript": "^5.4.3"
 	}
 }
