--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"cors": "^2.8.5",
 		"dotenv": "^16.4.5",
 		"express": "^4.18.2",
+		"moment-timezone": "^0.5.45",
 		"mongoose": "^7.0.2",
 		"nodemon": "^3.1.0",
 		"puppeteer": "^22.6.1"
